--- a/simplyexclude_style_admin.css
+++ b/simplyexclude_style_admin.css
@@ -1,33 +1,69 @@
+#se_admin_nav  {
+	background-color: #E4F2FD;
+	border-bottom-color: #C6D9E9;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+	padding: 1px 0;
+	margin: 0 0 0 0;
+}
+	
 #se_admin_nav ul li {
 	display: inline;
-	text-decoration: none;
-	padding-right: 4px;
+	padding: 0px;
 	margin: 0px;
 }
 
-form#cat_exclusion table tbody tr td.cat-id,
-form#tag_exclusion table tbody tr td.tag-id,
-form#page_exclusion table tbody tr td.page-id {
-	text-align: center;
-	width: 10%;
-	padding: 8px 5px;
+
+#se_admin_nav ul li a {
+	text-decoration: none;
+	padding: 13px 4px 15px 4px;
+	border-style:solid;
+	border-width:1px;
+	border-color:#E4F2FD #E4F2FD #C6D9E9 #E4F2FD;
 }
 
-form#cat_exclusion table thead tr th.cat-name,
-form#cat_exclusion table tbody tr td.cat-name,
-form#tag_exclusion table thead tr th.tag-name,
-form#tag_exclusion table tbody tr td.tag-name,
-form#page_exclusion table thead tr th.page-name,
-form#page_exclusion table tbody tr td.page-name {
+#se_admin_nav ul li a.current,
+#se_admin_nav ul li a:hover {
+	background-color:#FFFFFF;
+	border-style:solid;
+	border-width:1px;
+	border-color:#C6D9E9 #C6D9E9 #FFFFFF #C6D9E9 ;
+	color:#D54E21;
+}
+
+#se_admin_nav ul li a:hover {
+	background-color:#C6D9E9;
+}
+
+
+form#cat_exclusion table tr .action,
+form#cat_exclusion table tr .cat-id,
+form#tag_exclusion table tr .action,
+form#tag_exclusion table tr .tag-id,
+form#page_exclusion table tr .action,
+form#page_exclusion table tr .page-id {
 	text-align: left;
-	padding-left: 20px;
-	width: 40%;
+	width: 5%;
 }
 
-form#cat_exclusion table tbody tr td.cat-action,
-form#tag_exclusion table tbody tr td.tag-action,
-form#page_exclusion table tbody tr td.page-action {
-	text-align: center;
+form#cat_exclusion table tr .description,
+form#cat_exclusion table tr .cat-name,
+form#tag_exclusion table tr .description,
+form#tag_exclusion table tr .tag-name,
+form#page_exclusion table tr .description,
+form#page_exclusion table tr .page-name {
+	text-align: left;
+	width: 45%;
+}
+
+form#cat_exclusion table tr .inc-excl,
+form#cat_exclusion table tr .cat-action,
+form#tag_exclusion table tr .inc-excl,
+form#tag_exclusion table tr .tag-action,
+form#page_exclusion table tr .inc-excl,
+form#page_exclusion table tr .page-action {
+	text-align: left;
+	width: 50%;
 }
 
 form#cat_exclusion table tbody tr td.cat-action label,
@@ -40,10 +76,19 @@ form#page_exclusion table tbody tr td.page-action label {
 form#cat_exclusion table tbody tr td.cat-action input,
 form#tag_exclusion table tbody tr td.tag-action input {
 	margin-right: 15px;
-	margin-left: -5px;
+	margin-left: 0px;
 }
 
 form#page_exclusion table tbody tr td.page-action input {
 	margin-right: 15px;
-	margin-left: -5px;
+	margin-left: 0px;
+}
+
+
+form#cat_exclusion .submit,
+form#tag_exclusion .submit,
+form#page_exclusion .submit {
+	border-top: 0px solid #CCCCCC;
+	margin: 2px 0pt 0pt;
+	padding: 0em 0pt 0pt;
 }
