--- a/simplyexclude_style_admin.css
+++ b/simplyexclude_style_admin.css
@@ -1,103 +1,56 @@
-#se_admin_nav  {
-	background-color: #E4F2FD;
-	border-bottom-color: #C6D9E9;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-	padding: 1px 0;
-	margin: 0 0 0 0;
-}
-	
-#se_admin_nav ul li {
-	display: inline;
-	padding: 0px;
-	margin: 0px;
+input.se-term-input {
+	width: 15px;
+	float: left;
 }
 
-
-#se_admin_nav ul li a {
-	text-decoration: none;
-	padding: 13px 4px 15px 4px;
-	border-style:solid;
-	border-width:1px;
-	border-color:#E4F2FD #E4F2FD #C6D9E9 #E4F2FD;
+table.simplyexclude-actions-panel td.action {
+	width: 20%;
 }
 
-#se_admin_nav ul li a.current,
-#se_admin_nav ul li a:hover {
-	background-color:#FFFFFF;
-	border-style:solid;
-	border-width:1px;
-	border-color:#C6D9E9 #C6D9E9 #FFFFFF #C6D9E9 ;
-	color:#D54E21;
-}
-
-#se_admin_nav ul li a:hover {
-	background-color:#C6D9E9;
-}
-
-
-form#cat_exclusion table tr .action,
-form#cat_exclusion table tr .cat-id,
-form#tag_exclusion table tr .action,
-form#tag_exclusion table tr .tag-id,
-form#author_exclusion table tr .action,
-form#author_exclusion table tr .author-id,
-form#page_exclusion table tr .action,
-form#page_exclusion table tr .page-id {
-	text-align: left;
-	width: 5%;
-}
-
-form#cat_exclusion table tr .description,
-form#cat_exclusion table tr .cat-name,
-form#tag_exclusion table tr .description,
-form#tag_exclusion table tr .tag-name,
-form#author_exclusion table tr .description,
-form#author_exclusion table tr .author-name,
-form#page_exclusion table tr .description,
-form#page_exclusion table tr .page-name {
-	text-align: left;
-	width: 45%;
-}
-
-form#cat_exclusion table tr .inc-excl,
-form#cat_exclusion table tr .cat-action,
-form#tag_exclusion table tr .inc-excl,
-form#tag_exclusion table tr .tag-action,
-form#author_exclusion table tr .inc-excl,
-form#author_exclusion table tr .author-action,
-form#page_exclusion table tr .inc-excl,
-form#page_exclusion table tr .page-action {
-	text-align: left;
+table.simplyexclude-actions-panel td.description {
 	width: 50%;
 }
 
-form#cat_exclusion table tbody tr td.cat-action label,
-form#tag_exclusion table tbody tr td.tag-action label,
-form#author_exclusion table tbody tr td.author-action label,
-form#page_exclusion table tbody tr td.page-action label {
-	padding: 0;
-	margin: 0;
+table.simplyexclude-actions-panel td.inc-excl {
+	width: 30%;
 }
 
-form#cat_exclusion table tbody tr td.cat-action input,
-form#tag_exclusion table tbody tr td.tag-action input,
-form#author_exclusion table tbody tr td.author-action input {
-	margin-right: 15px;
-	margin-left: 0px;
+table.simply-exclude-settings-postbox {
+	margin-bottom: 10px;
 }
 
-form#page_exclusion table tbody tr td.page-action input {
-	margin-right: 15px;
-	margin-left: 0px;
+table.simplyexclude-active-panel td.description {
+	width: 70%;
 }
 
+table.simplyexclude-active-panel td.inc-excl {
+	width: 30%;
+}
 
-form#cat_exclusion .submit,
-form#tag_exclusion .submit,
-form#author_exclusion .submit,
-form#page_exclusion .submit {
-	border-top: 0px solid #CCCCCC;
-	margin: 2px 0pt 0pt;
-	padding: 0em 0pt 0pt;
+.simnplyexclude-metabox-holder-right-sidebar h4.simplyexclude-section-title {
+	font-size: 1.3em;
+	margin-top: 35px;
+	margin-bottom: 5px;
+}
+
+.ui-accordion-header {
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+	background-color: #ccc;
+
+    border-bottom-color: #DFDFDF;
+    box-shadow: 0 1px 0 #FFFFFF;
+    text-shadow: 0 1px 0 #FFFFFF;
+
+	background-color: #F1F1F1;
+	background-image: -moz-linear-gradient(center top , #F9F9F9, #ECECEC);
+}
+
+.ui-accordion-header a {
+	color: #000000;
+	text-decoration: none;
+}
+.ui-accordion-content {
+	border: 1px solid #ccc;
+	padding: 20px;
 }
