--- a/simplyexclude_style_admin.css
+++ b/simplyexclude_style_admin.css
@@ -1,8 +1,9 @@
+/*
 input.se-term-input {
 	width: 15px;
 	float: left;
 }
-
+*/
 table.simplyexclude-actions-panel td.action {
 	width: 20%;
 }
@@ -32,6 +33,33 @@ table.simplyexclude-active-panel td.inc-excl {
 	margin-top: 35px;
 	margin-bottom: 5px;
 }
+
+td.column-se-actions ul.se-actions-list,
+td.inc-excl ul.se-actions-list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	width: 100%;
+}
+
+td.column-se-actions ul.se-actions-list li,
+td.inc-excl ul.se-actions-list li {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	width: 100%;
+}
+
+td.column-se-actions ul.se-actions-list li input.se-term-input {
+	width: 15px;
+	/* float: left; */
+}
+
+td.column-se-actions ul.se-actions-list li label {
+	/* float: left; */
+	vertical-align: top;
+}
+
 
 .ui-accordion-header {
     border-top-left-radius: 3px;
